    - The hotkeys which grab items now work with items with a grid/inventory. This is thanks to an API change that allows transferring a stack with a quantity limit added in 2.0.46.
      - The trash hotkey has always worked with these items as it only attempts to move entire stacks anyway.
      - The setting to disallow items with health/grids has been removed, since it is no longer needed.
  Bugfixes:
    - Cargo landing pads and space platform hubs (theoretically) are now a valid source for items.
---------------------------------------------------------------------------------------------------
Version: 2.0.2
  Bugfixes:
    - Quality should now be supported - all counts/transfers/removals I could find have the quality parameter added.
    - Some minor code issues which probably wouldn't ever cause issues were fixed.
---------------------------------------------------------------------------------------------------
Version: 2.0.1
  Bugfixes:
    - Fix error due to change in finding prototype durability.
---------------------------------------------------------------------------------------------------
Version: 2.0.0
  Info:
    - Initial release for Factorio 2.0.
---------------------------------------------------------------------------------------------------
Version: 1.1.5
  Bugfixes:
    - Fix error due to missing position when using the new grab items hotkey when no compatible inventories were found near the player.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
  Features:
    - Added new hotkey to grab items from all entities in reach of the player, with a max range of 20 tiles for performance reasons. Vanilla reach distance is 10.
    - Added support for the burnt result inventory for boilers, locomotives, and reactors.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
  Bugfixes: