@@ -14,11 +14,11 @@ ManLog-MovedAll=All trash slots have been emptied.
 
 [mod-setting-name]
 ManualLogistics-IgnoreLogistics=Ignore Logistics Toggle
-ManualLogistics-NoHealthOnly=Don't Allow Items With Health
+ManualLogistics-UnlockLogistics=Unlock Logistics
 
 [mod-setting-description]
 ManualLogistics-IgnoreLogistics=Pressing the hotkey will take items even if logistics are toggled off. If set to false, the hotkey will no longer work if logistics are disabled.
-ManualLogistics-NoHealthOnly=If enabled the transfer hotkey will not attempt to get any item type with health/durability/ammo. This prevents a potential exploit where those items are fully healed on transfer.
+ManualLogistics-UnlockLogistics=Unlock Logistics for your force. Disabling WILL NOT remove the logistics panel once activated!
 
 [controls]
 manuallogistics=Take items
