@@ -5,5 +5,11 @@ data:extend({
         setting_type = "runtime-per-user",
         default_value = true,
         hidden = true
+    },
+    {
+        type = "bool-setting",
+        name = "ManualLogistics-UnlockLogistics",
+        setting_type = "runtime-per-user",
+        default_value = false
     }
 })
